--- a/views/degree-audit.ejs
+++ b/views/degree-audit.ejs
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="/stylesheet.css"/>
 </head>
-<body onload="checkStatus('<%= JSON.stringify(data) %>')">
+<body onload="checkStatus(`<%= JSON.stringify(data) %>`)">
 <%
 let capstone;
 switch (info['capstone']) {
