--- a/views/degree-audit.ejs
+++ b/views/degree-audit.ejs
@@ -86,17 +86,17 @@ for (let category of Object.keys(data)) {
                                     class="<%= data['information']['progress']['takenNum'] < data['information']['progress']['requiredNum'] ? 'warn' : null %>"
                             >
                                 <th scope="row" class="table-success">Information</th>
-                                <td >
+                                <td>
                                     <%= data['information']['progress']['takenNum'] %>/<%=
                                     data['information']['progress']['requiredNum'] %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['information']['taken'].length; i++){ %> <%=
                                         data['information']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['information']['recommend'].length; i++){ %> <%=
                                         data['information']['recommend'][i] %><br/>
@@ -120,14 +120,14 @@ for (let category of Object.keys(data)) {
                                     data['servicesAndOrganizations']['progress']['requiredNum']
                                     %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['servicesAndOrganizations']['taken'].length; i++){
                                     %> <%= data['servicesAndOrganizations']['taken'][i]
                                     %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['servicesAndOrganizations']['recommend'].length;
                                             i++){ %> <%=
@@ -149,13 +149,13 @@ for (let category of Object.keys(data)) {
                                     <%= data['technology']['progress']['takenNum'] %>/<%=
                                     data['technology']['progress']['requiredNum'] %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['technology']['taken'].length; i++){ %> <%=
                                         data['technology']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['technology']['recommend'].length; i++){ %> <%=
                                         data['technology']['recommend'][i] %><br/>
@@ -178,13 +178,13 @@ for (let category of Object.keys(data)) {
                                     data['peopleAndCommunities']['progress']['requiredNum']
                                     %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['peopleAndCommunities']['taken'].length; i++){ %>
                                         <%= data['peopleAndCommunities']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['peopleAndCommunities']['recommend'].length; i++){
                                     %> <%= data['peopleAndCommunities']['recommend'][i]
@@ -205,12 +205,12 @@ for (let category of Object.keys(data)) {
                                     <%= data['core']['progress']['takenNum'] %>/<%=
                                     data['core']['progress']['requiredNum'] %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i < data['core']['taken'].length;
                                             i++){ %> <%= data['core']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i < data['core']['recommend'].length;
                                             i++){ %> <%= data['core']['recommend'][i] %><br/>
                                     <% } %>
@@ -228,12 +228,12 @@ for (let category of Object.keys(data)) {
                                     <%= data['capstone']['progress']['takenNum'] %>/<%=
                                     data['capstone']['progress']['requiredNum'] %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i < data['capstone']['taken'].length;
                                             i++){ %> <%= data['capstone']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['capstone']['recommend'].length; i++){ %> <%=
                                         data['capstone']['recommend'][i] %><br/>
@@ -252,12 +252,12 @@ for (let category of Object.keys(data)) {
                                     <%= data['elective']['progress']['takenNum'] %>/<%=
                                     data['elective']['progress']['requiredNum'] %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i < data['elective']['taken'].length;
                                             i++){ %> <%= data['elective']['taken'][i] %><br/>
                                     <% } %>
                                 </td>
-                                <td>
+                                <td class="left">
                                     <% for (let i = 0; i <
                                     data['elective']['recommend'].length; i++){ %> <%=
                                         data['elective']['recommend'][i] %><br/>
